--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "vuetify": "^2.0.0"
     },
     "devDependencies": {
+        "@mdi/js": "^4.5.95",
         "@vue/cli-plugin-babel": "^3.11.0",
         "@vue/cli-plugin-eslint": "^3.11.0",
         "@vue/cli-service": "^3.11.0",
@@ -23,8 +24,10 @@
         "eslint-plugin-vue": "^5.0.0",
         "sass": "^1.17.4",
         "sass-loader": "^7.1.0",
+        "vue-cli-plugin-critical": "^1.1.0",
         "vue-cli-plugin-vuetify": "^0.6.3",
         "vue-template-compiler": "^2.6.10",
-        "vuetify-loader": "^1.2.2"
+        "vuetify-loader": "^1.3.1",
+        "webpack": "^4.41.2"
     }
 }
